# TIPE-hx3-convexes

./: .gitignore  README.md  pyproject.toml
src/hx3_convexes/: __init__.py  _common.py
src/hx3_convexes/angles/: __init__.py  core.py
src/hx3_convexes/bruteforce/: __init__.py  core.py
src/hx3_convexes/droites/: __init__.py  core.py
src/hx3_convexes/simplexes/: __init__.py  core.py
