[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "hx3_convexes"
version = "2.1.6"
authors = [
  { name="Maxime Muller ", email="geekoiemax@gmail.com" }, { name = "Mathias Fourcade", email = "fourcade.mathias@gmail.com"}
]
description = "Notre package pour le TIPE"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "matplotlib",
  "numpy",
  "scipy",
  "mplcursors",
]

[project-links]
Repository = "https://github.com/Geekoiemax/TIPE-hx3-convexes"
